public/styles.css
body {
  background-color: #00152b;
  color: white;

}
*{
    font-family: 'Asap Condensed', sans-serif;
    font-family: 'Ubuntu', sans-serif;
    margin: 0;
}

h1 {
  text-align: center;
}
.title{
  color: #e4f701;
}
.logo {
  display: flex;
  align-items: center;
  justify-content: center;
}

.logo img {
  margin-right: 10px;
  width: 4rem;
}

nav {
  margin: 0;
  padding: 1% 10%;
  background-color: #010f1f;
  display: flex;
  color: rgb(255, 255, 255);
  align-items: center;
  justify-content: space-between;
  margin: 0 auto;
  /* border: yellow 2px solid; */
}

nav ul {
  list-style-type: none;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 5px;
}

a {
  color: rgb(255, 255, 255);
  text-decoration: none;
  font-weight: 600;
  font-size: 1.3rem;
}

nav ul li a {
  display: block;
  padding: 8px 16px;
  transition: 0.2s;
  border-radius: 30px;
}

nav ul li a:hover{
    background-color: #e4f701;
    color: #010f1f;
}

.nav-check-label {
  display: none;
  height: fit-content;
  cursor: pointer;
  padding: 3px 8px;
  border-radius: 5px;
  transition: 0.2s;
}

#nav-check {
  display: none;
}

.nav-check-label:hover{
    background-color: white;
    color: #010f1f;
}

.close-btn {
  display: none;
}

@media only screen and (max-width:900px) {
    nav{
        padding: 2% 5%;
    }

  .nav-check-label {
    display: initial;
  }

    .close-btn{
        display: initial;
    }

    .close-btn{
      right: 20px;
    }

    .list-items{
        position: fixed;
        right: -250px;
        top: 0;
        z-index: 999;
        width: 250px;
        height: 100vh;
        color: white;
        transition: 0.2s;
        background-color: #010f1f;
    }

  nav ul {
    display: block;
    padding: 0 20px;
    margin-top: 30px;
  }

    nav ul li{
      margin-top: 30px;
    }

    nav ul li a {
      color: white;
    }

  body:has(#nav-check:checked) .list-items {
    right: 0px;
  }

}

section {
  padding-top: 1.5rem;
  padding-left: 15rem;
  padding-right: 15rem;

}

p {
  font-size: large;
}

.card-contributor{
  margin-bottom: 5rem;
}

footer {
  bottom: 0;
  background-color: #010f1f;
  height: fit-content;
  padding: 2% 5%;
}

footer div{
  margin-bottom: 1rem;
}


footer i{
  margin: 1.5vmax 5px 0;
  width: 35px;
  font-size: 1.7rem;
  transition: 0.2s;
}

footer p{
  font-size: 1rem;
}

footer i:hover{
  transform: scale(1.2);
}

.copyright{
  margin-top: 20px;
}

.page-container {
  min-height: 70vh;
}





/* CSS for HOME section  */

#home {
  text-align: center;
}

h1 {
  font-size: 3rem;
  margin-bottom: 0.75rem;
}

#one {
  color: blue;
  text-shadow: 10px blue;
}

#two {
  color: yellow;
  text-shadow: 10px yellow;
}

#three {
  color: red;
  text-shadow: 10px red;
}

p {
  font-size: 1.5rem;
}

/* CSS for EVENTS section  */
#events {
  text-align: center;
}

.event-item {
  display: grid;
  grid-template-columns: auto auto auto;
  /* justify-content: center; */
}

.event-detail {
  /* display: flex;
  flex-direction: column; */
  grid-column-start: 1;
  grid-column-end: 2;
  padding: 1rem;
  text-align: start;
}

.event-content {
  padding-top: 2rem;
  padding-bottom: 2rem;
  text-align: end;
  grid-column-start: 2;
  grid-column-end: 4;
  align-items: center;
  /* display: block; */
}

/* CSS for TEAM section  */
#team {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.card {
  margin-left: 2rem;
  margin-right: 2rem;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  box-shadow: 0 4px 8px 0 rgba(86, 101, 1, 0.2);
  transition: 0.3s;
  border-radius: 5px;
  background-color: #091f32;
  color: white;
  width: 20rem;
  text-align: center;
  padding: 1rem 0 1rem 0;
}

/* On mouse-over, add a deeper shadow */
.card:hover {
  box-shadow: 0 8px 16px 0 #FFD717;
  /* box-shadow: 8px 8px 8px 8px #FFD717; */
}

/* Add some padding inside the card container */
.card-container {
  padding: 2px 16px;
}

#team img {
  border-radius: 5px 5px 0 0;
}


/* CSS for Contributors Section  */
#contributors {
  display: flex;
  justify-content: center;
  margin: 0  1.5rem 5rem 1.5rem;
  
}

.card-contributor {
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
  justify-content: center;
  align-items: center;
  max-width: 300px;
  margin: auto;
  text-align: center;
  border-radius: 5px;
  background-color: #07210b;
  color: white;
  padding: 1rem 0 1rem 0;

}

.card-contributor hr{
  width: 100%;
}

.card-contributor img {
  border-radius: 50%;
}

.role {
  color: white;
  font-size: 18px;
}

.card-contributor a {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  text-decoration: none;
  font-size: 22px;
  color: white;
}

.card-contributor p {
  font-size: medium;
}

.card-contributor a i:hover {
  transition: 0.25s ease-in-out;
  transform: scale(1.2);
}




@media only screen and (max-width:600px) {

  section {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }

  h1 {
    font-size: 2rem;
  }

  p {
    font-size: 1rem;
  }

  /* EVENTS CSS  */
  #events {
    display: flex;
    flex-direction: column;
    text-align: center;
  }

  .event-item {
    display: flex;
    flex-direction: column;
  }

  .event-detail {
    display: flex;
    flex-direction: column;
    text-align: center;
  }

  .event-content {
    text-align: center;
  }

  /* TEAM CSS  */

  .card {
    width: 15rem;
    box-shadow: 0 8px 16px 0 #FFD717;
  }

  /* CONTRIBUTORS CSS  */
  #contributors {
    display: flex;
    flex-wrap: wrap;
  }
}

@media only screen and (max-width:767px) {
  #contributors {
    display: flex;
    flex-wrap: wrap;
  }

  .card-contributor {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    width: 15rem;
    background-color: #00152b;
  }

  .card-contributor img {
    box-shadow: 0 8px 16px 0 #00b40f;
  }

  .card-contributor p {
    font-size: 1rem;
  } 

}

@media only screen and (min-width: 768px) {
  section {
    padding-left: 8rem;
    padding-right: 8rem;
  }

  h1 {
    font-size: 2.5rem;
  }

  p {
    font-size: 1.5rem;
  }

  .event-detail {
    text-align: start;
  }

  .event-content {
    text-align: end;
  }

  #team {
    display: flex;
    flex-wrap: wrap;
    padding-left: 1rem;
    padding-right: 1rem;
  }

  #contributors {
    display: flex;
    flex-wrap: wrap;
  }

  .card-contributor {
    margin-top: 1rem;
    margin-bottom: 1rem;
    margin-left: 3rem;
    margin-right: 3rem;
    width: 14rem;
    background-color: #00152b;
  }


  .card-contributor img {
    box-shadow: 0 8px 16px 0 #00b40f;
  }

}

.blog-container {
  text-align: center;
}

.blog-container button {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  background-color: #e4f701;
  border: none;
  color: rgb(0, 0, 0);
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  border-radius: 5px;

}

